--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mocha": "^6.1.4",
     "supertest": "^4.0.2"
   }
